--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "react-multi-carousel": "^2.6.5",
-    "swr": "^1.0.1"
+    "react-multi-carousel": "^2.6.5"
   },
   "devDependencies": {
     "eslint": "7.32.0",
