--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "0.26.0",
+    "get-location-origin": "^1.0.0",
+    "location-origin": "^1.1.4",
     "next": "12.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
