--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "0.27.2",
+    "classnames": "^2.3.2",
     "mediumpostscard": "^2.0.0",
     "next": "12.3.1",
     "nth-check": "2.1.1",
