--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.3.2",
     "mediumpostscard": "^2.0.2",
     "next": "13.0.4",
+    "node-fetch": "^3.3.0",
     "nth-check": "2.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -20,6 +21,7 @@
     "react-multi-carousel": "^2.8.2"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5"
   }
